Переписала приложение под бд